order grammar section

--- a/docusaurus/docs/grammar/verbs-in-command-form.mdx
+++ b/docusaurus/docs/grammar/verbs-in-command-form.mdx
@@ -1,6 +1,7 @@
 ---
 title: Verbs in Command Form
 slug: verbs-command-form
+sidebar_position: 9
 ---
 |Form|Hebrew Example|Translation|
 |-----|------------|------------|
