--- a/docusaurus/docs/grammar/construct-chains.mdx
+++ b/docusaurus/docs/grammar/construct-chains.mdx
@@ -1,6 +1,7 @@
 ---
 title: Construct Chains
 slug: construct-chains
+sidebar_position: 5
 ---
 | Form| Hebrew example|Translation|
 | ----------- | ----------- |----------- |
