Update Pages “about”

--- a/docusaurus/src/pages/about.mdx
+++ b/docusaurus/src/pages/about.mdx
@@ -1,12 +1,11 @@
 ---
 title: About Us
 ---
-
 # About Us
 
 We are building a bigger tent for nonbinary Jews through a third-gender grammar systematics for Hebrew, guided by our Torah and Talmud that teach us to rejoice that which cannot be neatly categorized.
 
-<img src="/img/trans-aleph.png" />
+<img src="/img/trans-aleph.png" alt="Symbol combining the Pink Triangle, David's Star, transgender symbol, and the Hebrew letter Aleph" />
 
 This project is free, open-source, community-based, and grassroots.
 It lives and grows and changes with every single person who uses and adds to it.
@@ -56,7 +55,6 @@ Please use the Contact Box below
 to get in touch!
 
 <ContactForm />
-
 
 ## In the News
 
@@ -116,8 +114,7 @@ to get in touch!
 
 [OpenSiddur: Siddur Masorti](https://opensiddur.org/compilations/liturgical/siddurim/weekday-siddur/siddur-masorti-2019/)
 
-[New York Times: The Gender Binary in Language Classes](
-https://www.nytimes.com/2021/09/01/crosswords/gender-language-nonbinary.html)
+[New York Times: The Gender Binary in Language Classes](https://www.nytimes.com/2021/09/01/crosswords/gender-language-nonbinary.html)
 
 [Reconstructing Judaism](https://evolve.reconstructingjudaism.org/pronouns/#disqus_thread)
 
@@ -133,7 +130,6 @@ https://www.nytimes.com/2021/09/01/crosswords/gender-language-nonbinary.html)
 
 [Equal Eyes: Gender neutral Hebrew is the latest move towards Queer Inclusive Judaism](https://equal-eyes.org/database/2019/3/2/gender-neutral-hebrew-is-the-latest-move-towards-queer-inclusive-judaism)
 
-[Wikipedia](
-https://en.wikipedia.org/wiki/Gender_neutrality_in_languages_with_grammatical_gender#Hebrew)
+[Wikipedia](https://en.wikipedia.org/wiki/Gender_neutrality_in_languages_with_grammatical_gender#Hebrew)
 
 [Queering Religious Heritage: Languages in the era of COVID19 and changes in LGBTQ Jewish language at home, abroad, and online](https://aftercovid.rice.edu/abstract-queering-religious-heritage-languages-in-the-era-of-covid-19-changes-in-lgbtq-jewish-language-at-home-abroad-and-online/)
