--- a/docusaurus/src/pages/calendar.mdx
+++ b/docusaurus/src/pages/calendar.mdx
@@ -9,3 +9,5 @@ We will be hosting a workshop on May 18th at 2:30 pm on Zoom.
 We will tell the story of the project, break out into groups to learn more about the grammar of the project or more about its philosophy, and then have question and answer time.
 
 This workshop is free and open to anyone! If you're interested in the grammar breakout room, some Hebrew experience is recommended.
+
+[Sign up for the Zoom link](https://airtable.com/app03wKe5XFYb3LhJ/pagnD1u6nLzg6LYJc/form)
