Update Pages “about”

--- a/docusaurus/src/pages/about.mdx
+++ b/docusaurus/src/pages/about.mdx
@@ -1,18 +1,24 @@
 ---
 title: About Us
 ---
-# About Us
+<img src="/img/NBHP Logo 1 Dark Blue (Logo).png" alt=" A White transgender symbol with the Hebrew letter Alef inside of it against a dark blue background. White text reads: The Nonbinary Hebrew Project" />
 
-We are building a bigger tent for nonbinary Jews through a third-gender grammar systematics for Hebrew, guided by our Torah and Talmud that teach us to rejoice that which cannot be neatly categorized.
 
-<img src="/img/trans-aleph.png" alt="Symbol combining the Pink Triangle, David's Star, transgender symbol, and the Hebrew letter Aleph" />
 
-This project is free, open-source, community-based, and grassroots.
-It lives and grows and changes with every single person who uses and adds to it.
-Thank you to all the amazing people who are enlivening this work through speaking it into ever-renewed becoming!
-Deep gratitude to Tal Klausner, Rabbi Jonah Rank, brin solomon, Rabbi Emily Aviva Kapor-Mater, Ze'evi Tovlev, and so many more.
 
-## Who We Are
+# Mission Statement
+
+The Nonbinary Hebrew Project is a free, community-based language initiative. Its third-gender Hebrew grammatical system provides a growing, global network of Hebrew speakers and learners with the tools to forge meaningful liturgy and conversations in Jewish community. The Nonbinary Hebrew Project hosts language workshops and works with Hebrew users to develop affirming applications of third-gender Hebrew for personal and ritual use. 
+
+
+
+
+
+
+
+
+
+## Meet The Team
 
 <img
   src="/img/lior.png"
@@ -20,7 +26,9 @@ Deep gratitude to Tal Klausner, Rabbi Jonah Rank, brin solomon, Rabbi Emily Aviv
   width="255"
   height="274"
 />
- Lior Gross (they/them/theirs) is a connector who applies their knowledge of ecology as a framework
+ 
+
+Lior Gross (they/them/theirs) is a Jewish educator who applies their knowledge of ecology as a framework
 for justice through building critical community connections and fostering diversity
 for resilience through education.
 
@@ -30,19 +38,21 @@ for resilience through education.
   width="255"
   height="274"
 />
+
+
  Eyal Rivlin (he/him/his) is an instructor in the Jewish Studies Program at the University of
 Colorado Boulder, as well as a musician and love warrior. [Learn More about Eyal](https://www.colorado.edu/jewishstudies/faculty-and-staff/faculty/eyal-rivlin)
 
-## How to Cite Us
+## Citations
 
-We are so excited that you are using the Nonbinary Hebrew Project's grammatical system
-in your work!
-We want you to use this project and it is free to use.
-Please cite our work, so that folks who use your work can find our website and perhaps make works of their own!
-Here's a blurb you can copy and paste:
+The Nonbinary Hebrew Project's grammatical system is free to use. We ask that you cite our work so that readers can find us and help the project grow! 
 
-> "This project uses a gender-expansive Hebrew grammatical system developed by the Nonbinary Hebrew Project.
-> For more information, please visit www.nonbinaryhebrew.com "
+Sample citation text:
+
+"This project uses a gender-expansive Hebrew grammatical system developed by the Nonbinary Hebrew Project. For more information, please visit [www.nonbinaryhebrew.com](http://www.nonbinaryhebrew.com/) "
+
+
+
 
 ## Contact Form
 
