Update Pages “about”

--- a/docusaurus/src/pages/about.mdx
+++ b/docusaurus/src/pages/about.mdx
@@ -1,22 +1,11 @@
 ---
 title: About Us
 ---
-<img src="/img/NBHP Logo 1 Dark Blue (Logo).png" alt=" A White transgender symbol with the Hebrew letter Alef inside of it against a dark blue background. White text reads: The Nonbinary Hebrew Project" />
-
-
-
+![A White transgender symbol with a Hebrew letter Aleph in the middle on a dark blue background. White text reads The Nonbinary Hebrew Project](/img/nbhp-logo-1-dark-blue-logo-.png "NBHP Logo")
 
 # Mission Statement
 
 The Nonbinary Hebrew Project is a free, community-based language initiative. Its third-gender Hebrew grammatical system provides a growing, global network of Hebrew speakers and learners with the tools to forge meaningful liturgy and conversations in Jewish community. The Nonbinary Hebrew Project hosts language workshops and works with Hebrew users to develop affirming applications of third-gender Hebrew for personal and ritual use. 
-
-
-
-
-
-
-
-
 
 ## Meet The Team
 
@@ -26,7 +15,6 @@ The Nonbinary Hebrew Project is a free, community-based language initiative. Its
   width="255"
   height="274"
 />
- 
 
 Lior Gross (they/them/theirs) is a Jewish educator who applies their knowledge of ecology as a framework
 for justice through building critical community connections and fostering diversity
@@ -39,7 +27,6 @@ for resilience through education.
   height="274"
 />
 
-
  Eyal Rivlin (he/him/his) is an instructor in the Jewish Studies Program at the University of
 Colorado Boulder, as well as a musician and love warrior. [Learn More about Eyal](https://www.colorado.edu/jewishstudies/faculty-and-staff/faculty/eyal-rivlin)
 
@@ -50,9 +37,6 @@ The Nonbinary Hebrew Project's grammatical system is free to use. We ask that yo
 Sample citation text:
 
 "This project uses a gender-expansive Hebrew grammatical system developed by the Nonbinary Hebrew Project. For more information, please visit [www.nonbinaryhebrew.com](http://www.nonbinaryhebrew.com/) "
-
-
-
 
 ## Contact Form
 
