Update Pages “about”

--- a/docusaurus/src/pages/about.mdx
+++ b/docusaurus/src/pages/about.mdx
@@ -1,7 +1,7 @@
 ---
 title: About Us
 ---
-![A White transgender symbol with a Hebrew letter Aleph in the middle on a dark blue background. White text reads The Nonbinary Hebrew Project](/img/nbhp-logo-1-dark-blue-logo-.png "NBHP Logo")
+![A White transgender symbol with a Hebrew letter Aleph in the middle on a dark blue background. White text reads The Nonbinary Hebrew Project](/img/nbhp-logo-1-dark-blue-logo-.png)
 
 # Mission Statement
 
