Update Pages “about”

--- a/docusaurus/src/pages/about.mdx
+++ b/docusaurus/src/pages/about.mdx
@@ -1,11 +1,13 @@
 ---
 title: About Us
 ---
-![A White transgender symbol with a Hebrew letter Aleph in the middle on a dark blue background. White text reads The Nonbinary Hebrew Project](/img/nbhp-logo-1-dark-blue-logo-.png)
+
 
 # Mission Statement
 
 The Nonbinary Hebrew Project is a free, community-based language initiative. Its third-gender Hebrew grammatical system provides a growing, global network of Hebrew speakers and learners with the tools to forge meaningful liturgy and conversations in Jewish community. The Nonbinary Hebrew Project hosts language workshops and works with Hebrew users to develop affirming applications of third-gender Hebrew for personal and ritual use. 
+
+![A white transgender symbol with a Hebrew letter Aleph in the middle. White text reads: The Nonbinary Hebrew Project](/img/nbhp-logo-1-dark-blue-logo-.png)
 
 ## Meet The Team
 
