--- a/docusaurus/src/pages/calendar.mdx
+++ b/docusaurus/src/pages/calendar.mdx
@@ -1,13 +1,18 @@
 ---
 title: Calendar
 ---
-# Calendar
+# Upcoming Events
 
-## May 18th, 2:30 pm EST Virtual Workshop
-We will be hosting a workshop on May 18th at 2:30 pm on Zoom.
+## Open House Workshop: May 18th, 2025 2:30-4pm EST 
 
-We will tell the story of the project, break out into groups to learn more about the grammar of the project or more about its philosophy, and then have question and answer time.
 
-This workshop is free and open to anyone! If you're interested in the grammar breakout room, some Hebrew experience is recommended.
 
-[Sign up for the Zoom link](https://airtable.com/app03wKe5XFYb3LhJ/pagnD1u6nLzg6LYJc/form)
+![White text on a photo of a blue ocean.](/img/may-18-flyer-mockup-1-1-.png)
+
+We will be hosting an open house workshop on Sunday, May 18th at 2:30 pm on Zoom.
+
+We will tell the story of the project, break out into groups to deep dive into Nonbinary Hebrew grammar, or learn more about the project's philosophy. If you're interested in the grammar breakout room, some Hebrew experience is recommended.
+
+This workshop is free and open to the public! Real-time captioning will be provided. 
+
+[Register to join us on Zoom](tinyurl.com/23tmxy4p)[](https://airtable.com/app03wKe5XFYb3LhJ/pagnD1u6nLzg6LYJc/form)
