Update Pages “calendar”

--- a/docusaurus/src/pages/calendar.mdx
+++ b/docusaurus/src/pages/calendar.mdx
@@ -3,11 +3,7 @@ title: Calendar
 ---
 # Upcoming Events
 
-## Open House Workshop: May 18th, 2025 2:30-4pm EST 
-
-
-
-![White text on a photo of a blue ocean.](/img/may-18-flyer-mockup-1-1-.png)
+## Open House Workshop: May 18th, 2025 2:30-4pm EST
 
 We will be hosting an open house workshop on Sunday, May 18th at 2:30 pm on Zoom.
 
@@ -15,4 +11,8 @@ We will tell the story of the project, break out into groups to deep dive into N
 
 This workshop is free and open to the public! Real-time captioning will be provided. 
 
-[Register to join us on Zoom](tinyurl.com/23tmxy4p)[](https://airtable.com/app03wKe5XFYb3LhJ/pagnD1u6nLzg6LYJc/form)
+[Register to join us on Zoom](<>)
+
+![White text on a photo of a blue ocean.](/img/may-18-flyer-mockup-1-1-.png)
+
+[](tinyurl.com/23tmxy4p)[](https://airtable.com/app03wKe5XFYb3LhJ/pagnD1u6nLzg6LYJc/form)
