Update Grammar “adjectives”

--- a/docusaurus/docs/grammar/adjectives.mdx
+++ b/docusaurus/docs/grammar/adjectives.mdx
@@ -3,7 +3,7 @@ title: Adjectives
 slug: adjectives
 sidebar_position: 2
 ---
-|Form|Hebrew example|Translation|
-|------|----------|-----------|
-|singular| <HB> גְדוֹלֶה </HB>|big|
-|plural|<HB> גְדוֹלִימוֹת </HB>|big|
+|Form|NB|fem|masc|Translation|
+|------|-----|--|---|-----------|
+|singular| <HB> גְּדוֹלֶה </HB>| <HB> גְּדוֹלָה </HB> | <HB> גָּדוֹל </HB>|big|
+|plural|<HB> גְּדוֹלִימוֹת </HB>| <HB> גְּדוֹלוֹת </HB> | <HB> גְּדוֹלִים </HB>|big|
