Update Grammar “commonly-used-words”

--- a/docusaurus/docs/grammar/commonly-used-words.mdx
+++ b/docusaurus/docs/grammar/commonly-used-words.mdx
@@ -3,11 +3,11 @@ title: Commonly used words
 slug: common-words
 sidebar_position: 10
 ---
-|English|Hebrew|
-|-------|--------|
-|this|<HB> זֶת </HB>|
-|which|<HB> אֵיזֶת </HB>|
-|person|<HB> אישֶה </HB>|
-|people|<HB> אֲנָשִימוֹת </HB>|
-|child of|<HB> בֶּת </HB>|
-|teacher|<HB> מוֹרֶת </HB>|
+|English|NB|fem|masc|
+|-------|---|---|--|
+|this|<HB> זֶת </HB>|<HB> זוֹ </HB>|<HB> זֶה </HB>|
+|which|<HB> אֵיזֶת </HB>| <HB> אֵיזוֹ  </HB>|<HB> אֵיזֶה </HB>|
+|person|<HB> אישֶה </HB>| <HB> אִ'שָּׁה </HB>|<HB> אִישׁ </HB>|
+|people|<HB> אֲנָשִימוֹת </HB>|<HB> נָשִׁים </HB>|<HB> אֲנָשִׁים </HB>|
+|child of|<HB> בֶּת </HB>|<HB> בַּת </HB>|<HB> בֵּן </HB>|
+|teacher|<HB> מוֹרֶת </HB>|<HB> מוֹרָה </HB>|<HB> מוֹרֶה </HB>|
