Update Grammar “nouns”

--- a/docusaurus/docs/grammar/nouns.mdx
+++ b/docusaurus/docs/grammar/nouns.mdx
@@ -3,10 +3,10 @@ title: Nouns
 slug: nouns
 sidebar_position: 1
 ---
-|Form|Hebrew example|Translation|
-|-----|------------|------------|
-|singular| <HB> תַלְמִידֶה </HB>|student|
-|plural| <HB> תַלְמִידִימוֹת </HB>|students|
+|Form|NB|fem|masc|Translation|
+|-----|----|-----|---|------------|
+|singular| <HB> תַלְמִידֶה </HB>| <HB> תַּלְמִידָה </HB>| <HB> תַּלְמִיד </HB>|student|
+|plural| <HB> תַלְמִידִימוֹת </HB>| <HB> תַּלְמִידוֹת </HB>| <HB> תַּלְמִידִים </HB>|students|
 
 
 Alternate plural endings:
@@ -14,5 +14,3 @@ Alternate plural endings:
 talmidin
 
 talmidol
-
-achon
