--- a/docusaurus/docs/grammar/nouns.mdx
+++ b/docusaurus/docs/grammar/nouns.mdx
@@ -6,6 +6,7 @@ sidebar_position: 1
 |Form|NB|fem|masc|Translation|
 |-----|----|-----|---|------------|
 |singular| <HB> תַלְמִידֶה </HB>| <HB> תַּלְמִידָה </HB>| <HB> תַּלְמִיד </HB>|student|
+|singular|<HB> מוֹרֶת </HB>|<HB> מוֹרָה </HB>|<HB> מוֹרֶה </HB>|teacher|
 |plural| <HB> תַלְמִידִימוֹת </HB>| <HB> תַּלְמִידוֹת </HB>| <HB> תַּלְמִידִים </HB>|students|
 
 
