Update Grammar “present-tense-verbs”

--- a/docusaurus/docs/grammar/present-tense-verbs.mdx
+++ b/docusaurus/docs/grammar/present-tense-verbs.mdx
@@ -10,25 +10,29 @@ sidebar_position: 6
 
 ## <HB> שלמים </HB>
 
-| Form     | Hebrew example | Translation |
-| -------- | -------------- | ----------- |
-| singular | <HB> לוֹמֶדֶה </HB>     | They learn  |
-| plural   |<HB> לוֹמְדִימוֹת </HB>  | They learn  |
+| Form     | NB|fem|masc | Translation |
+| -------- | ------|-----|--- | ----------- |
+| singular | <HB> לוֹמֶדֶה </HB> |<HB> לוֹמֶדֶת </HB>|<HB> לוֹמֵד </HB>    | Xe learns  |
+| plural   |<HB> לוֹמְדִימוֹת </HB> |<HB> לוֹמְדוֹת </HB>  | <HB> לוֹמְדִים </HB>  | They learn  |
 
 ## Verbs that end in heh
 
 ## <HB> ל’’ה </HB>
 
-| Form     | Hebrew example | Translation |
-| -------- | -------------- | ----------- |
-| singular |<HB> עוֹשֶׂת </HB>       | They make   |
-| plural   |<HB> עוֹשִׂימוֹת </HB>   | They make   |
+
+
+| Form     | NB|fem|masc | Translation |
+| -------- | ------|-----|--- | ----------- |
+| singular |<HB> עוֹשֶׂת </HB>| <HB> עוֹשָׂה </HB>  |      <HB> עוֹשֶׂה </HB>  | Xe makes   |
+| plural   |<HB> עוֹשִׂימוֹת </HB>   | <HB> עוֹשׂוֹת </HB>  |<HB> עוֹשִׂים </HB>  |They make   |
 
 ## Verbs with a yud or vav as the second letter of the root
 
 ## <HB> ע’’ו/ע’’י </HB>
 
-| Form     | Hebrew example | Translation |
-| -------- | -------------- | ----------- |
-| singular | <HB> קָמֶה </HB>          | They rise   |
-| plural   | <HB> קָמִימוֹת </HB>     | They rise   |
+
+
+| Form     | NB|fem|masc | Translation |
+| -------- | ------|-----|--- | ----------- |
+| singular | <HB> קָמֶה </HB>          |<HB> קָמָה </HB>  |<HB> קָם </HB>  | Xe rises |
+| plural   | <HB> קָמִימוֹת </HB>     |<HB> קָמוֹת </HB>  |<HB> קָמִים </HB>  | They rise   |
