Update Grammar “pronominal-suffixes”

--- a/docusaurus/docs/grammar/pronominal-suffixes.mdx
+++ b/docusaurus/docs/grammar/pronominal-suffixes.mdx
@@ -4,11 +4,11 @@ slug: pronominal-suffixes
 sidebar_position: 4
 ---
 
-|Form|Hebrew Example|Translation|
-|----|-------------|-------------|
-|2nd person singular|<HB> -ךֶ </HB>|your|
-|2nd person plural |<HB> -כֶמֵן </HB>|you all's|
-|3rd person singular (single subject)|<HB> -ֶה </HB>|their|  
-|3rd person plural (single subject) | <HB> -מֵן </HB>|their|
-|3rd person singular (plural subject)| <HB>  -ֶיהֶ </HB>|their|
-|3rd person plural (plural subject) |<HB> -ֵיהֶמֵן </HB>|their|
+|Form|NB|fem|masc|Translation|
+|----|---|----|------|-------------|
+|2nd person singular|<HB> -ךֶ </HB> -|<HB> ךָ </HB> -|<HB> ךְ </HB>|your|
+|2nd person plural |<HB> -כֶמֵן </HB>|<HB> כֶן </HB>|<HB> כֶם </HB>|you all's|
+|3rd person singular (single subject)|<HB> -ֶה </HB>|<HB> הָ </HB>|<HB> וֹ </HB>|xir|  
+|3rd person plural (single subject) | <HB> -מֵן </HB>|<HB> ן </HB>|<HB> ם </HB>|their|
+|3rd person singular (plural subject)| <HB>  -ֶיהֶ </HB>|<HB> הָ </HB>|<HB> ה </HB>|xir|
+|3rd person plural (plural subject) |<HB> -ֵיהֶמֵן </HB>|<HB> הן </HB>|<HB> הם </HB>|their|
