Update Grammar “pronouns”

--- a/docusaurus/docs/grammar/pronouns.mdx
+++ b/docusaurus/docs/grammar/pronouns.mdx
@@ -3,9 +3,9 @@ title: Pronouns
 slug: pronouns
 sidebar_position: 3
 ---
-|Form|Hebrew example|Translation|
-|----------|----------|--------|
-|2nd person singular| <HB> אַתֶה </HB>| you|
-|2nd person plural| <HB> אַתֶמֵן </HB>| you all|
-|3rd person singular|<HB> הֶא </HB>| they|
-|3rd person plural|<HB> הֵמֵן </HB>|they|
+|Form|NB|fem|masc|Translation|
+|----------|------|----|---|-----|
+|2nd person singular| <HB> אַתֶה </HB>|<HB> אַתְּ </HB>|<HB> אַתָּה </HB>| you|
+|2nd person plural| <HB> אַתֶמֵן </HB>|<HB> אַתֶּן </HB>|<HB> אַתֶּם </HB>| you all|
+|3rd person singular|<HB> הֶא </HB>|<HB> הִיא </HB>|<HB> הוּא </HB>| xe|
+|3rd person plural|<HB> הֵמֵן </HB>|<HB> הֵן </HB>|<HB> הֵם </HB>|they|
