Update Grammar “verbs-in-command-form”

--- a/docusaurus/docs/grammar/verbs-in-command-form.mdx
+++ b/docusaurus/docs/grammar/verbs-in-command-form.mdx
@@ -3,7 +3,7 @@ title: Verbs in Command Form
 slug: verbs-command-form
 sidebar_position: 9
 ---
-|Form|Hebrew Example|Translation|
-|-----|------------|------------|
-|2nd person singular| <HB> עֲשֵת </HB>|Make!|
-|2nd person singular| <HB> תְנֶה </HB>|Give!|
+|Form|NB|fem|masc|Translation|
+|-----|-----|----|---|------------|
+|2nd person singular| <HB> עֲשֵת </HB>|<HB> עֲשִׂי!‏ </HB>|<HB> עֲשֵׂה!‏ </HB>|Make!|
+|2nd person singular| <HB> תְנֶה </HB>|<HB> תְּנִי!‏ </HB>|<HB> תֵּן!‏ </HB>|Give!|
