Update Grammar “nouns”

--- a/docusaurus/docs/grammar/nouns.mdx
+++ b/docusaurus/docs/grammar/nouns.mdx
@@ -3,6 +3,13 @@ title: Nouns
 slug: nouns
 sidebar_position: 1
 ---
+
+
+# Nouns
+## How does it work?
+
+## Table of examples
+
 | Form     | NB                        | Feminine                | Masculine               | Translation |
 | -------- | ------------------------- | ----------------------- | ----------------------- | ----------- |
 | singular | <HB> תַלְמִידֶה </HB>     | <HB> תַּלְמִידָה </HB>  | <HB> תַּלְמִיד </HB>    | student     |
