Update Grammar “nouns”

--- a/docusaurus/docs/grammar/nouns.mdx
+++ b/docusaurus/docs/grammar/nouns.mdx
@@ -3,12 +3,18 @@ title: Nouns
 slug: nouns
 sidebar_position: 1
 ---
-
-
 # Nouns
-## How does it work?
 
-## Table of examples
+## How Do Nouns Work?
+
+A noun is a person, place, or thing. Hebrew nouns are generally derived from three letter roots, though some nouns may have two letter roots. Traditionally, Hebrew nouns are gendered either masculine or feminine. The Nonbinary Hebrew Project proposes that nouns which refer directly to people should have a third-gender form. In this form, nouns may end with an “eh,” sound, or an “et,” sound. 
+
+In the table below, you will see nouns in nonbinary, feminine, and masculine form. Plural nouns in Nonbinary Hebrew combine the masculine plural ending, -im with the feminine plural ending, ot, creating the -imot ending. 
+
+
+
+
+## Table of Examples
 
 | Form     | NB                        | Feminine                | Masculine               | Translation |
 | -------- | ------------------------- | ----------------------- | ----------------------- | ----------- |
