Update Pages “calendar”

--- a/docusaurus/src/pages/calendar.mdx
+++ b/docusaurus/src/pages/calendar.mdx
@@ -11,8 +11,6 @@ We will tell the story of the project, break out into groups to deep dive into N
 
 This workshop is free and open to the public! Real-time captioning will be provided. 
 
-[Register to join us on Zoom](<>)
+[Register to join us on Zoom](https://airtable.com/app03wKe5XFYb3LhJ/pagnD1u6nLzg6LYJc/form)
 
 ![White text on a photo of a blue ocean.](/img/may-18-flyer-mockup-1-1-.png)
-
-[](tinyurl.com/23tmxy4p)[](https://airtable.com/app03wKe5XFYb3LhJ/pagnD1u6nLzg6LYJc/form)
