Update Grammar “adjectives”

--- a/docusaurus/docs/grammar/adjectives.mdx
+++ b/docusaurus/docs/grammar/adjectives.mdx
@@ -3,11 +3,13 @@ title: Adjectives
 slug: adjectives
 sidebar_position: 2
 ---
-# <H1> How Do Adjectives Work? <H1>
+# <H1> How Do Adjectives Work? </H1>
 
 An adjective is a word that describes a noun. Hebrew adjectives match the gender and number of the noun they describe. If a noun is feminine, the adjective describing it will also be feminine.  If a noun is plural, the adjective describing it will also be plural. The Nonbinary Hebrew Project proposes that adjectives describing third-gender nouns should also be in third-gender form. This applies to both the singular and plural forms of adjectives.
 
-| Form     | NB                       | fem                   | masc                  | Translation |
+## Table of Examples
+
+| Form     | NB                       | Feminine              | Masculine             | Translation |
 | -------- | ------------------------ | --------------------- | --------------------- | ----------- |
 | singular | <HB> גְּדוֹלֶה </HB>     | <HB> גְּדוֹלָה </HB>  | <HB> גָּדוֹל </HB>    | big         |
 | plural   | <HB> גְּדוֹלִימוֹת </HB> | <HB> גְּדוֹלוֹת </HB> | <HB> גְּדוֹלִים </HB> | big         |
