--- a/docusaurus/docs/grammar/present-tense-verbs.mdx
+++ b/docusaurus/docs/grammar/present-tense-verbs.mdx
@@ -6,11 +6,15 @@ sidebar_position: 6
 
 ## Present Tense
 
+A verb is a word that conveys an action. Present tense means that the action is happening right now. A Hebrew verb in the present tense matches the gender and number of the noun that comes before it, just like an adjective. If a noun is masculine, the verb that follows it will also be masculine. If a noun is plural, the verb that follows it will also be plural. Some Hebrew sentences will not have a verb at all. The placement of letters and vowel markers in a verb determines how that verb will be conjugated. 
+ The Nonbinary Hebrew project proposes that verbs which follow third-gender nouns should also be in third-gender form. This guide uses the third person singular English neopronoun Xe, pronounced “zee,” to illustrate this grammatical function. 
+
+
 ## Standard verbs
 
 ## <HB> שלמים </HB>
 
-| Form     | NB|fem|masc | Translation |
+| Form     | NB|Feminine|Masculine | Translation |
 | -------- | ------|-----|--- | ----------- |
 | singular | <HB> לוֹמֶדֶה </HB> |<HB> לוֹמֶדֶת </HB>|<HB> לוֹמֵד </HB>    | Xe learns  |
 | plural   |<HB> לוֹמְדִימוֹת </HB> |<HB> לוֹמְדוֹת </HB>  | <HB> לוֹמְדִים </HB>  | They learn  |
@@ -21,7 +25,7 @@ sidebar_position: 6
 
 
 
-| Form     | NB|fem|masc | Translation |
+| Form     | NB|Feminine|Masculine | Translation |
 | -------- | ------|-----|--- | ----------- |
 | singular |<HB> עוֹשֶׂת </HB>| <HB> עוֹשָׂה </HB>  |      <HB> עוֹשֶׂה </HB>  | Xe makes   |
 | plural   |<HB> עוֹשִׂימוֹת </HB>   | <HB> עוֹשׂוֹת </HB>  |<HB> עוֹשִׂים </HB>  |They make   |
@@ -32,7 +36,7 @@ sidebar_position: 6
 
 
 
-| Form     | NB|fem|masc | Translation |
+| Form     | NB|Feminine|Masculine | Translation |
 | -------- | ------|-----|--- | ----------- |
 | singular | <HB> קָמֶה </HB>          |<HB> קָמָה </HB>  |<HB> קָם </HB>  | Xe rises |
 | plural   | <HB> קָמִימוֹת </HB>     |<HB> קָמוֹת </HB>  |<HB> קָמִים </HB>  | They rise   |
