Attempt to improve tags

--- a/docusaurus/blog/2025-01-30-modet-ani.mdx
+++ b/docusaurus/blog/2025-01-30-modet-ani.mdx
@@ -2,7 +2,8 @@
 title: Birkot HaShachar
 slug: birkot-hashachar
 tags:
-  - Blessings:Shacharit
+  - Blessings:Morning
+  - Services:Shacharit
 ---
 
 Morning blessing - substitutions:
