--- a/docusaurus/blog/2025-02-18-calling-someone-up-to-the-torah-aliyah.mdx
+++ b/docusaurus/blog/2025-02-18-calling-someone-up-to-the-torah-aliyah.mdx
@@ -2,8 +2,8 @@
 title: Calling someone up to the Torah/Aliyah
 slug: torah-aliyah
 tags:
-  - Torah
-  - Shacharit
+  - Services:Shacharit
+  - Services:Torah_Reading
 ---
 
 <HB> (בֶּת כּוֹהֵן קְרָבֶה), יַעָמְדֶה (שם) בֶּת (שם מישפחה), (בֶּת כּוֹהֵן). </HB>
