--- a/docusaurus/blog/2025-02-18-counting-the-omer.mdx
+++ b/docusaurus/blog/2025-02-18-counting-the-omer.mdx
@@ -3,10 +3,9 @@ title: Counting the Omer
 pdf_file: /img/exploring-gender-through-counting-the-omer-keshet.pdf
 slug: counting-the-omer
 tags:
-  - Omer
-  - Keshet
+  - Holidays:Omer
   - Holidays:Passover
-  - Link
+  - Resources:Keshet
 ---
 
 [](/img/exploring-gender-through-counting-the-omer-keshet.pdf)[Exploring Gender Through Counting the Omer - Keshet Webpage](https://www.keshetonline.org/resources/exploring-gender-through-counting-the-omer)
