--- a/docusaurus/blog/2025-02-18-friday-night-shabbat-blessings.mdx
+++ b/docusaurus/blog/2025-02-18-friday-night-shabbat-blessings.mdx
@@ -4,11 +4,11 @@ slug: friday-night-blessings
 additional_files:
   - /img/shabbat-blessings-nonbinary-hebrew.pdf
 tags:
+  - Blessings:Candlelighting
+  - Blessings:HaMotzi
+  - Blessings:Handwashing
+  - Blessings:Kiddush
   - Holidays:Shabbat
-  - Blessings:Friday_Night
-  - Handwashing
-  - HaMotzi
-  - Candlelighting
 ---
 
 [https://www.emilyjoygoldberg.com/genderexpansive-shabbat-prayers ](https://www.emilyjoygoldberg.com/genderexpansive-shabbat-prayers)
