--- a/docusaurus/blog/2025-02-18-priestly-blessing-friday-night-childrens-blessing.mdx
+++ b/docusaurus/blog/2025-02-18-priestly-blessing-friday-night-childrens-blessing.mdx
@@ -2,6 +2,7 @@
 title: Friday Night Children's Blessing
 slug: friday-night-childrens-blessing
 tags:
+  - Blessings:Children
   - Holidays:Shabbat
 ---
 
