--- a/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
+++ b/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
@@ -3,8 +3,9 @@ title: Toward a Gender-Inclusive Hevra Kadisha
 pdf_file: /img/toward-a-gender-inclusive-hevra-kadisha-final-.pdf
 slug: hevra-kadisha
 tags:
-  - Guides
-  - Lifecycle:Hevra_Kadisha
+  - Lifecycle:Death
+  - Resources:Guide
+  - Resources:Keshet
 ---
 
 [](/img/toward-a-gender-inclusive-hevra-kadisha-final-.pdf)[Toward A Gender-Inclusive Hevra Kadisha - Keshet Webpage](https://www.keshetonline.org/text-only-toward-a-gender-inclusive-hevra-kadisha/)
