--- a/docusaurus/blog/2025-02-20-bessarabian-extensions.mdx
+++ b/docusaurus/blog/2025-02-20-bessarabian-extensions.mdx
@@ -4,7 +4,8 @@ applied_use_file:
   - /img/2020-09-04-nonbinary-hebrew-extensions.pdf
 slug: bessarabian-extensions
 pdf_file: /img/2020-09-04-nonbinary-hebrew-extensions.pdf
-tags: []
+tags:
+  - Resources:Guide
 ---
 [Besărobĭsh (Bessarabian) extensions by Binah bas Sure (she) PDF](/img/2020-09-04-nonbinary-hebrew-extensions.pdf)
 
