--- a/docusaurus/blog/2025-02-20-conversion-certificate.mdx
+++ b/docusaurus/blog/2025-02-20-conversion-certificate.mdx
@@ -4,8 +4,7 @@ pdf_file: /img/conversion-certificate-nonbinary-convert-they-mibet-nhp-.pdf
 slug: conversion-certificate
 tags:
   - Lifecycle:Conversion
-  - Document
-  - Link
+  - Resources:Certificate
 ---
 
 [Conversion certificate by R' Jeremy Sher](https://docs.google.com/document/d/1qzw0QH_RGCJ-IW85nkQDZgzN3Xg2d9T0vAZCEc92stE/edit?usp=sharing)
