--- a/docusaurus/blog/2025-02-22-a-haggadah-of-our-own.mdx
+++ b/docusaurus/blog/2025-02-22-a-haggadah-of-our-own.mdx
@@ -8,7 +8,7 @@ additional_files:
   - /img/a-haggadah-of-our-own.epub
   - /img/host-s-guide.epub
 tags:
-  - Passover:Haggadah
+  - Holidays:Passover
 ---
 
 "A Haggadah Of Our Own" prepared by Thursday Bram:
