--- a/docusaurus/blog/2025-02-22-hineini-haggadah.mdx
+++ b/docusaurus/blog/2025-02-22-hineini-haggadah.mdx
@@ -3,7 +3,7 @@ title: Hineini Haggadah
 slug: hineini-haggadah
 pdf_file: /img/hineini-haggadah-2019_5779.pdf
 tags:
-  - Passover:Haggadah
+  - Holidays:Passover
 ---
 
 Kohenet Ahava Lilith evershYne's Hineni Haggadah, Pesach 5779
