--- a/docusaurus/blog/2025-02-23-chanukah-blessings.mdx
+++ b/docusaurus/blog/2025-02-23-chanukah-blessings.mdx
@@ -3,7 +3,8 @@ title: Chanukah Blessings
 slug: chanukah-blessings
 pdf_file: /img/inclusive-chanukah-blessings.pdf
 tags:
-  - Blessings:Chanukah
+  - Blessings:Candlelighting
+  - Holidays:Chanukah
 ---
 Chanukah Blessings (conjugated by Kohenet Ahava Lilith EvershYne)
 
