--- a/docusaurus/blog/2025-02-23-lekhe-dodeti.mdx
+++ b/docusaurus/blog/2025-02-23-lekhe-dodeti.mdx
@@ -2,6 +2,9 @@
 title: Lekhe Dodeti
 slug: lekhe-dodeti
 pdf_file: /img/nonbinary-siddur-lekhe-dodeti.pdf
+tags:
+  - Holidays:Shabbat
+  - Services:Kabbalat_Shabbat
 ---
 brin solomon's Lekhe Dodeti
 (from their siddur Davar Ḥadash)
