--- a/docusaurus/blog/2025-02-23-nonbinary-aramaic-proposal.mdx
+++ b/docusaurus/blog/2025-02-23-nonbinary-aramaic-proposal.mdx
@@ -2,6 +2,8 @@
 title: Nonbinary Aramaic proposal
 slug: nonbinary-aramaic-proposal
 pdf_file: /img/a-proposal-for-nonbinary-aramaic.pdf
+tags:
+  - Resources:Guide
 ---
 [brin solomon's Nonbinary Aramaic proposal](https://docs.google.com/document/d/1UB2Y9BPW7z6GW54fpuKsLkA-JZQOYhfviU7ptTkK8Zc/edit?tab=t.0)
 (in progress)
