--- a/docusaurus/blog/2025-02-23-siddur-masorti-egalitarian-sephardi-siddur.mdx
+++ b/docusaurus/blog/2025-02-23-siddur-masorti-egalitarian-sephardi-siddur.mdx
@@ -1,5 +1,7 @@
 ---
 title: Siddur Masorti (Egalitarian Sephardi Siddur)
 slug: siddur-masorti
+tags:
+  - Resources:Reference
 ---
 [Siddur Masorti (Egalitarian Sephardi Siddur)](https://siddurmasorti.com/products/sm1?variant=29914729939026) uses our system!
