--- a/docusaurus/blog/2025-02-23-soulmate-blessing.mdx
+++ b/docusaurus/blog/2025-02-23-soulmate-blessing.mdx
@@ -4,6 +4,8 @@ slug: soulmate-blessing
 pdf_file: ""
 additional_files:
   - /img/soulmate-blessing.docx
+tags:
+  - Blessings:Relationship
 ---
 Check out this beautiful soulmate blessing created by Rabbi Ariel Tovlev!
 
