--- a/docusaurus/blog/2025-02-23-sukkah-blessings.mdx
+++ b/docusaurus/blog/2025-02-23-sukkah-blessings.mdx
@@ -2,8 +2,7 @@
 title: Sukkah blessings
 slug: sukkah-blessings
 tags:
-  - Sukkot
-  - Blessings
+  - Holidays:Sukkot
 ---
 Sukkah blessings from R' SAM Luckey
 
