--- a/docusaurus/blog/2025-02-23-wedding-blessings.mdx
+++ b/docusaurus/blog/2025-02-23-wedding-blessings.mdx
@@ -1,6 +1,8 @@
 ---
 title: Wedding blessings
 slug: wedding-blessings
+tags:
+  - Lifecycle:Wedding
 ---
 
 Wedding blessings from Rabbi Charna Rosenholtz
