--- a/docusaurus/blog/2025-02-23-yizkor-blessings.mdx
+++ b/docusaurus/blog/2025-02-23-yizkor-blessings.mdx
@@ -3,8 +3,7 @@ title: Yizkor Blessings
 slug: yizkor-blessings
 pdf_file: /img/yizkorprayernon-binary5785.dwd.pdf
 tags:
-  - Blessings:Yizkor
-  - Lifecycle:Yizkor
+  - Lifecycle:Death
 ---
 Yizkor Blessings from David E Rendsburg
 
