--- a/docusaurus/blog/2025-02-27-blessings-before-haftarah.mdx
+++ b/docusaurus/blog/2025-02-27-blessings-before-haftarah.mdx
@@ -5,8 +5,8 @@ pdf_file: /img/haftarah-blessing-nonbinary.pdf
 additional_files:
   - /img/nonbinary-blessing-before-the-haftarah.mp3
 tags:
-  - Shacharit
-  - Blessings
+  - Blessings:Torah
+  - Services:Shacharit
 ---
 Cantor Abbe Lyons
 <PdfViewer frontMatter={frontMatter} />
