--- a/docusaurus/blog/2025-02-27-queer-liberation-haggadah-5779.mdx
+++ b/docusaurus/blog/2025-02-27-queer-liberation-haggadah-5779.mdx
@@ -2,6 +2,7 @@
 title: Queer Liberation Haggadah 5779
 slug: queer-liberation-haggadah
 pdf_file: /img/a-queer-liberation-hagaddah.pdf
+tags:
+  - Holidays:Passover
 ---
 [Queer Liberation Haggadah](https://docs.google.com/document/d/1xLfkZZUDBM7kiJpFFUhJGfP4zKDe__csVOE1R61O_yQ/edit?tab=t.0)
-
