--- a/docusaurus/blog/2025-02-28-gabbais-manual.mdx
+++ b/docusaurus/blog/2025-02-28-gabbais-manual.mdx
@@ -3,7 +3,8 @@ title: Gabbai's Manual
 slug: gabbai-manual
 pdf_file: /img/gabbai-s-manual-combined-hebrew-only-.pdf
 tags:
-  - Shacharit
+  - Resources:Guide
+  - Services:Shacharit
 ---
 Adapted by Rabbi Stefanie Gedan from Siddur Lev Shalem
 <PdfViewer frontMatter={frontMatter} />
