--- a/docusaurus/blog/2025-03-02-a-queer-seder-5783.mdx
+++ b/docusaurus/blog/2025-03-02-a-queer-seder-5783.mdx
@@ -3,6 +3,6 @@ title: A Queer Seder 5783
 slug: a-queer-seder
 pdf_file: /img/aqueerseder-pesach5783.pdf
 tags:
-  - Passover:Haggadah
+  - Holidays:Passover
 ---
 <PdfViewer frontMatter={frontMatter} />
