--- a/docusaurus/blog/2025-03-02-blessings-for-nonbinary-hebrew.mdx
+++ b/docusaurus/blog/2025-03-02-blessings-for-nonbinary-hebrew.mdx
@@ -1,8 +1,10 @@
 ---
-title: Blessings for Nonbinary Hebrew
+title: Blessings with Nonbinary Hebrew
 slug: blessings
 pdf_file: /img/blessings-nbhp.pdf
 tags:
-  - Blessings
+  - Services:Shacharit
+  - Holidays:Shabbat
+  - Services:Torah_Reading
 ---
 <PdfViewer frontMatter={frontMatter} />
