--- a/docusaurus/blog/2025-03-02-hamavdil.mdx
+++ b/docusaurus/blog/2025-03-02-hamavdil.mdx
@@ -3,7 +3,8 @@ title: Hamavdil
 slug: hamavdil
 pdf_file: /img/multigender-hamavdil-bracha.pdf
 tags:
-  - Blessings:Havdalah
+  - Holidays:Havdalah
+  - Holidays:Shabbat
 ---
 Cantor Abbe Lyons' Hamavdil
 
