add keywords to blog bodies

--- a/docusaurus/blog/2025-02-18-priestly-blessing-friday-night-childrens-blessing.mdx
+++ b/docusaurus/blog/2025-02-18-priestly-blessing-friday-night-childrens-blessing.mdx
@@ -6,7 +6,7 @@ tags:
   - Holidays:Shabbat
 ---
 
-Friday night blessing for children:
+Friday night shabbat blessing for children:
 
 <HB> יְשִׂימְךֶ אֱלהיִם כְּאָדַם וְשָׂרַה, רִבקָה וְיוֹסֵף </HB>
 
