--- a/docusaurus/blog/2025-03-02-hamavdil.mdx
+++ b/docusaurus/blog/2025-03-02-hamavdil.mdx
@@ -6,6 +6,6 @@ tags:
   - Holidays:Havdalah
   - Holidays:Shabbat
 ---
-Cantor Abbe Lyons' Hamavdil
+Cantor Abbe Lyons' Hamavdil for Havdalah
 
 <PdfViewer frontMatter={frontMatter} />
