Update Pages “donate”

--- a/docusaurus/src/pages/donate.mdx
+++ b/docusaurus/src/pages/donate.mdx
@@ -2,5 +2,8 @@
 title: Donate
 slug: donate
 ---
-
+[Text on blue background with almond blossoms: Blossom with the Nonbinary Hebrew Project](campaign-cover-image-3-.png)
+# Blossom with the Nonbinary Hebrew Project
+This Tu B'Shvat, we are fundraising $5,000 to develop an Educator's Guide. This resource will be a supportive and fundamental tool for anyone implementing the Nonbinary Hebrew Project's grammatical system in their classroom or workplace.
+[Donate here](https://donate.mazloweb.com/donate/HuQTVwmv1GMvsT7oQAjHda/)
 <DonateButton/>
